Open sub menu when the selected item is folder

We mustn't open it as bookmark.

Bug: 791962
Change-Id: I65b51e8af76c4b31f83991a4f7d3f3f8c37f1a9f
Reviewed-on: https://chromium-review.googlesource.com/882902
Reviewed-by: Robert Sesek <rsesek@chromium.org>
Commit-Queue: Robert Sesek <rsesek@chromium.org>
Cr-Commit-Position: refs/heads/master@{#531962}
Former-commit-id: 9aa4d2ce7228d359cd02f91866c1364cbfb14823